// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSelect should render 1`] = `
<div>
  <div
    class="ant-space-compact css-dev-only-do-not-override-1kf000u ant-space-compact-block ant-space-compact-vertical"
    style="row-gap: 8px;"
  >
    <div
      class="ant-collapse ant-collapse-icon-position-start css-dev-only-do-not-override-1kf000u"
    >
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-disabled="false"
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="expanded"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            选中 1 条数据
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="ant-space css-dev-only-do-not-override-1kf000u ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
              style="width: 100%;"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-table-wrapper css-dev-only-do-not-override-1kf000u"
                >
                  <div
                    class="ant-spin-nested-loading css-dev-only-do-not-override-1kf000u"
                  >
                    <div
                      class="ant-spin-container"
                    >
                      <div
                        class="ant-table css-dev-only-do-not-override-1kf000u"
                      >
                        <div
                          class="ant-table-container"
                        >
                          <div
                            class="ant-table-content"
                          >
                            <table
                              style="table-layout: auto;"
                            >
                              <colgroup>
                                <col />
                                <col />
                                <col />
                                <col
                                  style="width: 80px;"
                                />
                              </colgroup>
                              <thead
                                class="ant-table-thead"
                              >
                                <tr>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    姓名
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    年龄
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    城市
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    取消
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                class="ant-table-tbody"
                              >
                                <tr
                                  class="ant-table-row ant-table-row-level-0"
                                  data-row-key="1"
                                >
                                  <td
                                    class="ant-table-cell"
                                  >
                                    张三
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    25
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    北京
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-1kf000u ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only ant-btn-compact-vertical-item ant-btn-compact-vertical-first-item"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="close"
                                          class="anticon anticon-close"
                                          role="img"
                                          style="color: red;"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="close"
                                            fill="currentColor"
                                            fill-rule="evenodd"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                        </div>
                      </div>
                      <ul
                        class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-1kf000u"
                      >
                        <li
                          class="ant-pagination-total-text"
                        >
                          <span>
                            总计：
                            1
                             条
                          </span>
                        </li>
                        <li
                          aria-disabled="true"
                          class="ant-pagination-prev ant-pagination-disabled"
                          title="Previous Page"
                        >
                          <button
                            class="ant-pagination-item-link"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              aria-label="left"
                              class="anticon anticon-left"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="left"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                                />
                              </svg>
                            </span>
                          </button>
                        </li>
                        <li
                          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                          tabindex="0"
                          title="1"
                        >
                          <a
                            rel="nofollow"
                          >
                            1
                          </a>
                        </li>
                        <li
                          aria-disabled="true"
                          class="ant-pagination-next ant-pagination-disabled"
                          title="Next Page"
                        >
                          <button
                            class="ant-pagination-item-link"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              aria-label="right"
                              class="anticon anticon-right"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="right"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                                />
                              </svg>
                            </span>
                          </button>
                        </li>
                        <li
                          class="ant-pagination-options"
                        >
                          <div
                            aria-label="Page Size"
                            class="ant-select ant-select-sm ant-select-outlined ant-select-compact-vertical-item ant-select-compact-vertical-first-item ant-pagination-options-size-changer css-dev-only-do-not-override-1kf000u ant-select-single ant-select-show-arrow ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-wrap"
                              >
                                <span
                                  class="ant-select-selection-search"
                                >
                                  <input
                                    aria-autocomplete="list"
                                    aria-controls="rc_select_TEST_OR_SSR_list"
                                    aria-expanded="false"
                                    aria-haspopup="listbox"
                                    aria-label="Page Size"
                                    aria-owns="rc_select_TEST_OR_SSR_list"
                                    autocomplete="off"
                                    class="ant-select-selection-search-input"
                                    id="rc_select_TEST_OR_SSR"
                                    role="combobox"
                                    type="search"
                                    value=""
                                  />
                                </span>
                                <span
                                  class="ant-select-selection-item"
                                  title="20 / page"
                                >
                                  20 / page
                                </span>
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space css-dev-only-do-not-override-1kf000u ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
      style="width: 100%;"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-table-wrapper css-dev-only-do-not-override-1kf000u"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-1kf000u"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table css-dev-only-do-not-override-1kf000u"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                  >
                    <table
                      style="table-layout: auto;"
                    >
                      <colgroup>
                        <col
                          class="ant-table-selection-col"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell ant-table-selection-column"
                            scope="col"
                          >
                            <div
                              class="ant-table-selection"
                            >
                              <label
                                class="ant-checkbox-wrapper css-dev-only-do-not-override-1kf000u"
                              >
                                <span
                                  class="ant-checkbox ant-checkbox-indeterminate ant-wave-target css-dev-only-do-not-override-1kf000u"
                                >
                                  <input
                                    aria-label="Select all"
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </div>
                          </th>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            姓名
                          </th>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            年龄
                          </th>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            城市
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                          data-row-key="1"
                        >
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-dev-only-do-not-override-1kf000u"
                            >
                              <span
                                class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1kf000u ant-checkbox-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            张三
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            25
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            北京
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="2"
                        >
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper css-dev-only-do-not-override-1kf000u"
                            >
                              <span
                                class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1kf000u"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            李四
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            30
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            上海
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="3"
                        >
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper css-dev-only-do-not-override-1kf000u"
                            >
                              <span
                                class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1kf000u"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            王五
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            28
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            广州
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <ul
                class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-1kf000u"
              >
                <li
                  class="ant-pagination-total-text"
                >
                  <span>
                    总计：
                    3
                     条
                  </span>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-prev ant-pagination-disabled"
                  title="Previous Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                  tabindex="0"
                  title="1"
                >
                  <a
                    rel="nofollow"
                  >
                    1
                  </a>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-next ant-pagination-disabled"
                  title="Next Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="right"
                      class="anticon anticon-right"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-options"
                >
                  <div
                    aria-label="Page Size"
                    class="ant-select ant-select-sm ant-select-outlined ant-select-compact-vertical-item ant-select-compact-vertical-last-item ant-pagination-options-size-changer css-dev-only-do-not-override-1kf000u ant-select-single ant-select-show-arrow ant-select-show-search"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-wrap"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-label="Page Size"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="20 / page"
                        >
                          20 / page
                        </span>
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TableSelect should render in disabled mode 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-1kf000u ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
    style="width: 100%;"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-table-wrapper css-dev-only-do-not-override-1kf000u"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1kf000u"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          姓名
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          城市
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          张三
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          25
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          北京
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-1kf000u"
            >
              <li
                class="ant-pagination-total-text"
              >
                <span>
                  总计：
                  1
                   条
                </span>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="Previous Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-next ant-pagination-disabled"
                title="Next Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-options"
              >
                <div
                  aria-label="Page Size"
                  class="ant-select ant-select-sm ant-select-outlined ant-pagination-options-size-changer css-dev-only-do-not-override-1kf000u ant-select-single ant-select-show-arrow ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-wrap"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-label="Page Size"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          role="combobox"
                          type="search"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="20 / page"
                      >
                        20 / page
                      </span>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TableSelect should render in readOnly mode 1`] = `
<div>
  <div
    class="ant-space css-dev-only-do-not-override-1kf000u ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
    style="width: 100%;"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-table-wrapper css-dev-only-do-not-override-1kf000u"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1kf000u"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table css-dev-only-do-not-override-1kf000u"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          姓名
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          城市
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          张三
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          25
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          北京
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-1kf000u"
            >
              <li
                class="ant-pagination-total-text"
              >
                <span>
                  总计：
                  1
                   条
                </span>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="Previous Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-next ant-pagination-disabled"
                title="Next Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-options"
              >
                <div
                  aria-label="Page Size"
                  class="ant-select ant-select-sm ant-select-outlined ant-pagination-options-size-changer css-dev-only-do-not-override-1kf000u ant-select-single ant-select-show-arrow ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-wrap"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-label="Page Size"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          role="combobox"
                          type="search"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="20 / page"
                      >
                        20 / page
                      </span>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TableSelect should render with expandSelected 1`] = `
<div>
  <div
    class="ant-space-compact css-dev-only-do-not-override-1kf000u ant-space-compact-block ant-space-compact-vertical"
    style="row-gap: 8px;"
  >
    <div
      class="ant-collapse ant-collapse-icon-position-start css-dev-only-do-not-override-1kf000u"
    >
      <div
        class="ant-collapse-item ant-collapse-item-active"
      >
        <div
          aria-disabled="false"
          aria-expanded="true"
          class="ant-collapse-header"
          role="button"
          tabindex="0"
        >
          <div
            class="ant-collapse-expand-icon"
          >
            <span
              aria-label="expanded"
              class="anticon anticon-right ant-collapse-arrow"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="transform: rotate(90deg);"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
          <span
            class="ant-collapse-header-text"
          >
            选中 1 条数据
          </span>
        </div>
        <div
          class="ant-collapse-content ant-collapse-content-active"
        >
          <div
            class="ant-collapse-content-box"
          >
            <div
              class="ant-space css-dev-only-do-not-override-1kf000u ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
              style="width: 100%;"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-table-wrapper css-dev-only-do-not-override-1kf000u"
                >
                  <div
                    class="ant-spin-nested-loading css-dev-only-do-not-override-1kf000u"
                  >
                    <div
                      class="ant-spin-container"
                    >
                      <div
                        class="ant-table css-dev-only-do-not-override-1kf000u"
                      >
                        <div
                          class="ant-table-container"
                        >
                          <div
                            class="ant-table-content"
                          >
                            <table
                              style="table-layout: auto;"
                            >
                              <colgroup>
                                <col />
                                <col />
                                <col />
                                <col
                                  style="width: 80px;"
                                />
                              </colgroup>
                              <thead
                                class="ant-table-thead"
                              >
                                <tr>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    姓名
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    年龄
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    城市
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                    scope="col"
                                  >
                                    取消
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                class="ant-table-tbody"
                              >
                                <tr
                                  class="ant-table-row ant-table-row-level-0"
                                  data-row-key="1"
                                >
                                  <td
                                    class="ant-table-cell"
                                  >
                                    张三
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    25
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    北京
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-1kf000u ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only ant-btn-compact-vertical-item ant-btn-compact-vertical-first-item"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="close"
                                          class="anticon anticon-close"
                                          role="img"
                                          style="color: red;"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="close"
                                            fill="currentColor"
                                            fill-rule="evenodd"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                        </div>
                      </div>
                      <ul
                        class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-1kf000u"
                      >
                        <li
                          class="ant-pagination-total-text"
                        >
                          <span>
                            总计：
                            1
                             条
                          </span>
                        </li>
                        <li
                          aria-disabled="true"
                          class="ant-pagination-prev ant-pagination-disabled"
                          title="Previous Page"
                        >
                          <button
                            class="ant-pagination-item-link"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              aria-label="left"
                              class="anticon anticon-left"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="left"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                                />
                              </svg>
                            </span>
                          </button>
                        </li>
                        <li
                          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                          tabindex="0"
                          title="1"
                        >
                          <a
                            rel="nofollow"
                          >
                            1
                          </a>
                        </li>
                        <li
                          aria-disabled="true"
                          class="ant-pagination-next ant-pagination-disabled"
                          title="Next Page"
                        >
                          <button
                            class="ant-pagination-item-link"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              aria-label="right"
                              class="anticon anticon-right"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="right"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                                />
                              </svg>
                            </span>
                          </button>
                        </li>
                        <li
                          class="ant-pagination-options"
                        >
                          <div
                            aria-label="Page Size"
                            class="ant-select ant-select-sm ant-select-outlined ant-select-compact-vertical-item ant-select-compact-vertical-first-item ant-pagination-options-size-changer css-dev-only-do-not-override-1kf000u ant-select-single ant-select-show-arrow ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-wrap"
                              >
                                <span
                                  class="ant-select-selection-search"
                                >
                                  <input
                                    aria-autocomplete="list"
                                    aria-controls="rc_select_TEST_OR_SSR_list"
                                    aria-expanded="false"
                                    aria-haspopup="listbox"
                                    aria-label="Page Size"
                                    aria-owns="rc_select_TEST_OR_SSR_list"
                                    autocomplete="off"
                                    class="ant-select-selection-search-input"
                                    id="rc_select_TEST_OR_SSR"
                                    role="combobox"
                                    type="search"
                                    value=""
                                  />
                                </span>
                                <span
                                  class="ant-select-selection-item"
                                  title="20 / page"
                                >
                                  20 / page
                                </span>
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space css-dev-only-do-not-override-1kf000u ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
      style="width: 100%;"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-table-wrapper css-dev-only-do-not-override-1kf000u"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-1kf000u"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table css-dev-only-do-not-override-1kf000u"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                  >
                    <table
                      style="table-layout: auto;"
                    >
                      <colgroup>
                        <col
                          class="ant-table-selection-col"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell ant-table-selection-column"
                            scope="col"
                          >
                            <div
                              class="ant-table-selection"
                            >
                              <label
                                class="ant-checkbox-wrapper css-dev-only-do-not-override-1kf000u"
                              >
                                <span
                                  class="ant-checkbox ant-checkbox-indeterminate ant-wave-target css-dev-only-do-not-override-1kf000u"
                                >
                                  <input
                                    aria-label="Select all"
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </div>
                          </th>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            姓名
                          </th>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            年龄
                          </th>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            城市
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                          data-row-key="1"
                        >
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-dev-only-do-not-override-1kf000u"
                            >
                              <span
                                class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1kf000u ant-checkbox-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            张三
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            25
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            北京
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="2"
                        >
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper css-dev-only-do-not-override-1kf000u"
                            >
                              <span
                                class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1kf000u"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            李四
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            30
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            上海
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="3"
                        >
                          <td
                            class="ant-table-cell ant-table-selection-column"
                          >
                            <label
                              class="ant-checkbox-wrapper css-dev-only-do-not-override-1kf000u"
                            >
                              <span
                                class="ant-checkbox ant-wave-target css-dev-only-do-not-override-1kf000u"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            王五
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            28
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            广州
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <ul
                class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-1kf000u"
              >
                <li
                  class="ant-pagination-total-text"
                >
                  <span>
                    总计：
                    3
                     条
                  </span>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-prev ant-pagination-disabled"
                  title="Previous Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                  tabindex="0"
                  title="1"
                >
                  <a
                    rel="nofollow"
                  >
                    1
                  </a>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-next ant-pagination-disabled"
                  title="Next Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="right"
                      class="anticon anticon-right"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-options"
                >
                  <div
                    aria-label="Page Size"
                    class="ant-select ant-select-sm ant-select-outlined ant-select-compact-vertical-item ant-select-compact-vertical-last-item ant-pagination-options-size-changer css-dev-only-do-not-override-1kf000u ant-select-single ant-select-show-arrow ant-select-show-search"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-wrap"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-label="Page Size"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="20 / page"
                        >
                          20 / page
                        </span>
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
